Thanks Game Night Calendar

--- a/Events/ThanksGameNight.html
+++ b/Events/ThanksGameNight.html
@@ -37,6 +37,7 @@
     - Prizes
     </pre>
 
+
     <p>
       I would like to formally invite you to the Thanks-Game Night!
     </p>
@@ -63,6 +64,9 @@
           One 14pc set of Resin Dice from <a href="https://www.krakendice.com/resin-dice">Kraken Dice</a>
         </blockquote>
     </p>
+
+    Add it to your calendar: <br>
+    <a target="_blank" href="https://calendar.google.com/calendar/event?action=TEMPLATE&amp;tmeid=MWlhZHY5NWhyZ3JibjBsdmt0ZWo0NW43Nm0gc2F1bHQxMDAwQG0&amp;tmsrc=sault1000%40gmail.com"><img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_en.gif"></a>
   </main>
 
   <footer>
